[gd_scene load_steps=4 format=3 uid="uid://8oueelfqnsuj"]

[ext_resource type="Script" path="res://scenes/ui/menu/popup_object.gd" id="1_q7mo4"]
[ext_resource type="PackedScene" uid="uid://bucl1s8eaacb1" path="res://scenes/ui/button/audio_button.tscn" id="2_dlrcv"]
[ext_resource type="AnimationLibrary" uid="uid://clkwayymrxjft" path="res://assets/animations_ui/global_ui.res" id="3_0qhgg"]

[node name="PopupObject" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(200, 150)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q7mo4")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "TITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionMargin" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Description" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/DescriptionMargin"]
unique_name_in_owner = true
layout_mode = 2
text = "Blallasd a
sdasdasd 
adsasd"
horizontal_alignment = 1

[node name="ButtonsMargin" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonsMargin"]
layout_mode = 2

[node name="CloseButton" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonsMargin/HBoxContainer" instance=ExtResource("2_dlrcv")]
layout_mode = 2
size_flags_horizontal = 3
text = "CLOSE"

[node name="MainMenuButton" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonsMargin/HBoxContainer" instance=ExtResource("2_dlrcv")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "MAIN MENU"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"global_ui": ExtResource("3_0qhgg")
}

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ButtonsMargin/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ButtonsMargin/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
